Add mobile numeric keyboard support

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <div class="toggle">
                 <button id="modeToggle">$</button>
             </div>
+            <input type="tel" id="hiddenInput" class="hidden-input">
             <div class="display" id="display">0</div>
         </div>
         <div class="right">
