GH pages fix and keyboard fix for desktop

--- a/index.html
+++ b/index.html
@@ -21,8 +21,21 @@
             <div class="toggle">
                 <button id="modeToggle">$</button>
             </div>
-            <input type="tel" id="hiddenInput" class="hidden-input">
             <div class="display" id="display">0</div>
+            <div class="keypad">
+                <button class="key" data-key="7">7</button>
+                <button class="key" data-key="8">8</button>
+                <button class="key" data-key="9">9</button>
+                <button class="key" data-key="4">4</button>
+                <button class="key" data-key="5">5</button>
+                <button class="key" data-key="6">6</button>
+                <button class="key" data-key="1">1</button>
+                <button class="key" data-key="2">2</button>
+                <button class="key" data-key="3">3</button>
+                <button class="key" data-key="-">+/-</button>
+                <button class="key" data-key="0">0</button>
+                <button class="key add" data-key="+">+</button>
+            </div>
         </div>
         <div class="right">
             <div class="numbers" id="numbers"></div>
