Add slider for resizing the keypad

--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
             </div>
         </div>
 
-        <div class="keypad">
+        <div class="keypad-container">
+            <div class="resize-handle" id="resizeHandle">
+                <div class="resize-grip"></div>
+            </div>
+            <div class="keypad">
             <!-- Function row -->
             <button class="key function" data-action="clear">AC</button>
 
