Add ability to edit old inputs

--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
             <button class="key number" data-number="1">1</button>
             <button class="key number" data-number="2">2</button>
             <button class="key number" data-number="3">3</button>
-            <button class="key operator" data-action="add">+</button>
+            <div class="key operator add-subtract-container" data-action="add-subtract-container">
+                <button class="subtract-button" data-action="subtract" aria-label="Subtract" title="Subtract">−</button>
+                <button class="add-button" data-action="add" aria-label="Add" title="Add">+</button>
+            </div>
 
             <!-- Bottom row -->
             <button class="key number" data-number="0">0</button>
